--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI="mongodb+srv://sindhukasarla999:Sindhu$123@cluster0.y0z9v.mongodb.net/"
+MONGODB_URI="mongodb+srv://sindhukasarla999:Sindhu$123@cluster0.y0z9v.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET="secret_ecom"
